[package]
name = "amr"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.0", features = ["derive"] }
dirs = "4.0"
indicatif = "0.16"
futures-util = "0.3"
mime = "0.3"
